--- a/Web/src/app/components/asset/list-assets/list-assets.component.css
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.css
@@ -3,6 +3,12 @@
     display: flex;
 }
 
+.blue-button.action-button {
+    margin-top: 4px;
+    height: 58px;
+    line-height: 58px;
+}
+
 .filter-title {
     font-size: 11px;
     font-weight: 500;
