--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -12,7 +12,7 @@
       <div fxLayout="column" fxLayoutGap="60px">
         <div fxLayout="row" fxLayoutGap="36px" fxLayoutAlign="space-between center">
           <div class="asset-icon">
-            <img [src]="getAssetImgUrl()">
+            <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
           </div>
           <div fxLayout="column">
             <div class="symbol">{{asset.code}}</div>
