--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -39,7 +39,7 @@
     </div>
     <inheritance-input *ngIf="showReferral" #Referral [options]="getReferralOptions()" [value]="referralCode" (onChange)="onChangeReferralCode($event)"></inheritance-input>
     <p class="discount" *ngIf="showReferral && discountMessage.length > 0">{{discountMessage}}</p>
-    <p *ngIf="hasMetamask && hasUnlockedAccount && hasAUC">Confirm that you are the wallet owner.</p>
+    <p *ngIf="hasMetamask && hasUnlockedAccount && hasAUC">Please sign a message to confirm that you are the wallet owner.</p>
     <div class="action-button truncate" [ngClass]="hasMetamask && hasUnlockedAccount && hasAUC ? 'blue-button' : 'disabled-button'" (click)="signMessage()">CONFIRM</div>   
   </div>
   <div class="request-expert" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
