--- a/Web/src/app/components/advisor/top-experts/top-experts.component.css
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.css
@@ -60,3 +60,7 @@
 ::ng-deep .mat-option:hover:not(.mat-option-disabled) {
     background: #252525;
 }
+
+.pagination-link{
+    margin-bottom: 76px;
+}
