--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -123,8 +123,10 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns;" class="element-row"></tr>
       </table>
-      <div class="pagination-link" *ngIf="hasMoreAdvices()" (click)="loadMoreAdvices()">
-        LOAD MORE
+      <div *ngIf="hasMoreAdvices()" fxLayoutAlign="center center">
+        <button class="pagination-link" (click)="loadMoreAdvices()">
+          LOAD MORE
+        </button>
       </div>
     </div>
 </div>
