--- a/Web/src/app/components/header/header.component.css
+++ b/Web/src/app/components/header/header.component.css
@@ -41,7 +41,7 @@ a span {
 
 .separator {
     width: 1px;
-    height: 100%;
+    height: calc(100% - 40px);
     text-align: center;
     background-color: #959595;
 }
