--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -581,3 +581,19 @@ textarea:read-only {
 .expert-rating .br-fontawesome-o .br-selected:after{
   color:#999999;
 }
+
+.pagination-link{
+  font-size: 14.5px;
+  font-weight: 500;
+  text-align: center;
+  color: #07d1ff;
+  text-decoration: underline;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+}
+
+.pagination-link.is-loading {
+  color: gray;
+  text-decoration: none;
+}
