--- a/Web/src/app/components/util/footer/footer.component.html
+++ b/Web/src/app/components/util/footer/footer.component.html
@@ -17,13 +17,13 @@
         <div class="footer-item-title text-right" fxHide.lt-sm>FOLLOW US</div>
         <div class="footer-item" fxLayout="row" fxLayoutGap="8px">
           <div class="icon-wrapper">
-            <a><fa-icon [icon]="['fab','facebook-f']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
+            <a href="https://www.facebook.com/AuctusProject/" target="_blank"><fa-icon [icon]="['fab','facebook-f']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
           </div>
           <div class="icon-wrapper">
-            <a><fa-icon [icon]="['fab','twitter']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
+            <a href="https://twitter.com/AuctusProject" target="_blank"><fa-icon [icon]="['fab','twitter']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
           </div>
           <div class="icon-wrapper">
-            <a><fa-icon [icon]="['fab','linkedin-in']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
+            <a href="https://www.linkedin.com/company/auctus-project/" target="_blank"><fa-icon [icon]="['fab','linkedin-in']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
           </div>
         </div>
       </div>
