--- a/Web/src/app/components/util/coin-search/coin-search.component.html
+++ b/Web/src/app/components/util/coin-search/coin-search.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="{{outlineField ? 'outline' : 'standard'}}" class="container-field" [class]="darkStyle ? 'dark-border' : ''" hideRequiredMarker>
     <mat-label class="search-coin-label">{{placeholder}}</mat-label>
-    <input matInput type="text" autocomplete="off" [matAutocomplete]="coinsearch"
+    <input matInput type="search" autocomplete="off" [matAutocomplete]="coinsearch"
         [(ngModel)]="inputText"
         [style.color]="darkStyle ? 'white' : '#101010'"
         placeholder="{{placeholder}}" 
