--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -478,10 +478,6 @@ textarea:read-only {
 .social-media-button {
   border: solid 1px rgba(0,0,0,.87);
   color: rgba(0,0,0,.87);
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -492,6 +488,16 @@ textarea:read-only {
 
 .social-media-button span {
   margin: auto;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.social-media-button fa-icon {
+  margin: auto;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .truncate{
