new recommendation value

--- a/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
+++ b/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
@@ -3,7 +3,7 @@
   <h2 mat-dialog-title class="modal-title">Confirm recommendation</h2>
   <mat-dialog-content class="modal-content">
     <p>Are you sure?</p> 
-    <p><b>{{getAdviceType()}}</b> recommendation to <b>{{data.assetName}}</b></p>
+    <p><b>{{getAdviceType()}}</b> recommendation to <b>{{data.assetName}}</b> at <b>{{data.lastValue | currency}}</b></p>
   </mat-dialog-content>
   <mat-dialog-actions class="btn-actions">
     <button mat-stroked-button fxFlex="50" [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
