--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -121,7 +121,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns;" class="element-row"></tr>
+        <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick(row)" class="element-row"></tr>
       </table>
       <div *ngIf="hasMoreAdvices()" fxLayoutAlign="center center">
         <button class="pagination-link" (click)="loadMoreAdvices()">
