--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -15,7 +15,7 @@
           <div class="expert-followers">Followed by {{expert.numberOfFollowers}} {{getInvestorsWordPluralOrSingular()}}</div>
         </div>
         <div fxLayout="row" fxLayoutAlign="end end" fxLayoutGap="10px">
-          <div class="blue-button action-button truncate" *ngIf="showOwnerButton" (click)="onNewAdviceClick()">NEW RECOMMENDATION</div>   
+          <div class="blue-button action-button truncate" *ngIf="showOwnerButton" (click)="onNewAdviceClick()">NEW RATING</div>   
           <div class="blue-button action-button truncate" *ngIf="showOwnerButton" (click)="onEditProfileClick()">EDIT PROFILE</div>     
           <div class="white-button action-button truncate" *ngIf="!showOwnerButton && expert.following" (click)="onUnfollowClick()">
             UNFOLLOW
