--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -20,6 +20,6 @@
   </div>
   <percentage-display [value]="asset.variation24h"></percentage-display>
   <div class="blue-button action-button" *ngIf="showButtonForExpert" (click)="onGiveRecommendationClick($event)">
-    Recommend
+    Rate It
   </div>
 </div>
