--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -1,6 +1,6 @@
 <div class="global-container">
   <div class="section-title">
-    Expert Recommendations
+    Expert Ratings
   </div>
   <div class="section-subtitle">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
