--- a/Web/src/app/components/util/footer/footer.component.html
+++ b/Web/src/app/components/util/footer/footer.component.html
@@ -33,9 +33,9 @@
   <div class="copright-terms-privacy" fxLayout="row" fxLayoutAlign="space-between center">
     <div>All rights reserved. Copyrights © 2016</div>
     <div class="terms-privacy" fxLayoutGap="6px">
-      <a>Privacy</a>
+      <a href="https://dl.auctus.org/Privacy_Policy.pdf" target="_blank">Privacy</a>
       <span>|</span>
-      <a>Terms</a>
+      <a href="https://dl.auctus.org/Terms_of_Use.pdf" target="_blank">Terms</a>
     </div>
   </div>
 </div>
