--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -10,7 +10,7 @@
       </mat-select>
     </mat-form-field>
     <div class="spacer"></div>
-    <div class="blue-button action-button" *ngIf="showAdvisorButton" (click)="onNewAdviceClick()">NEW RECOMMENDATION</div>
+    <div class="blue-button action-button" *ngIf="showAdvisorButton" (click)="onNewAdviceClick()">NEW RATING</div>
     <div class="white-button action-button" *ngIf="showAdvisorButton" (click)="onEditProfileClick()">EDIT PROFILE</div>
   </div>
   <div class="advisors-list" fxHide.lt-md>
