--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -612,3 +612,7 @@ textarea:read-only {
   color: gray !important;
   text-decoration: none !important;
 }
+
+.text-center{
+  text-align: center;
+}
