--- a/Web/src/app/components/advisor/new-advice/new-advice.component.css
+++ b/Web/src/app/components/advisor/new-advice/new-advice.component.css
@@ -1,35 +1,48 @@
 .div-data {
-    padding-bottom: 25px;
+    padding: 25px;
+    width: 370px;
+    border: solid 1px #363636;
+    margin: auto;
+    font-size: 12px;
+    font-weight: 300;
+    color: #1a1a1a;
 }
 
 .btn-option {
-    margin-top: 15px;
     color: rgba(0, 0, 0, 0.9); 
+    line-height: 50px;
+    width: 160px;
+}
+
+.btn-option[disabled],
+.btn-option[disabled]:hover{
+    background-color: gray;
+    cursor: default;
 }
 
 .btn-buy {
-    background-color: rgba(62, 209, 66, 0.1);
-}
-
-.btn-buy:hover {
     background-color: rgba(62, 209, 66, 0.95);
     color: white;
 }
 
+.btn-buy:hover {
+    background-color: rgba(62, 209, 66, 0.6);
+}
+
 .btn-sell {
-    background-color: rgba(255, 0, 0, 0.07);
+    background-color: rgba(209, 62, 62, 1);
+    color: white;
 }
 
 .btn-sell:hover {
-    background-color: rgba(255, 0, 0, 0.9);
-    color: white;
+    background-color: rgba(209, 62, 62, 0.6);
 }
 
 .btn-close {
-    background-color: rgba(0, 0, 0, 0.05);  
+    background-color: rgba(153, 153, 153, 1);   
+    color: white;
 }
 
 .btn-close:hover {
-    background-color: rgba(0, 0, 0, 0.4);   
-    color: white;
+    background-color: rgba(153, 153, 153, 0.6);  
 }
