--- a/Web/src/app/components/advisor/new-advice/new-advice.component.html
+++ b/Web/src/app/components/advisor/new-advice/new-advice.component.html
@@ -1,6 +1,7 @@
 <div class="div-data" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-  <coin-search #CoinSearch [options]="getSearchOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"></coin-search>
-  <button *ngIf="showButtons" class="btn-buy btn-option" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="buy()">BUY at {{lastValue | currency}}</button>
-  <button *ngIf="showButtons && showSell" class="btn-sell btn-option" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="sell()">SELL at {{lastValue | currency}}</button>
-  <button *ngIf="showButtons && showClose" class="btn-close btn-option" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="close()">CLOSE at {{lastValue | currency}}</button>
+  <div class="text-center">Chose a coin, select one position and hit confirm. The update on your list will be automatic.</div>
+  <coin-search #CoinSearch [options]="getSearchOptions()"></coin-search>
+  <button *ngIf="showButtons" class="btn-buy btn-option" mat-flat-button (click)="showButtons && buy()">BUY<ng-container *ngIf="lastValue"> at {{lastValue | currency}}</ng-container></button>
+  <button *ngIf="(showButtons && showSell)" class="btn-sell btn-option" mat-flat-button (click)="showButtons && showSell && sell()">SELL<ng-container *ngIf="lastValue"> at {{lastValue | currency}}</ng-container></button>
+  <button *ngIf="(showButtons && showClose)" class="btn-close btn-option" mat-flat-button (click)="showButtons && showClose && close()">CLOSE<ng-container *ngIf="lastValue"> at {{lastValue | currency}}</ng-container></button>
 </div>
