--- a/Web/src/app/components/util/fullscreen-modal/fullscreen-modal.component.css
+++ b/Web/src/app/components/util/fullscreen-modal/fullscreen-modal.component.css
@@ -18,5 +18,6 @@
     float: right;
     cursor: pointer;
     border-width: 0px;
-    font-size: 20px;
+    font-size: 50px;
+    line-height: 20px
 }
