--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -4,7 +4,9 @@
       <table mat-table [dataSource]="adviceList" class="recommendation-table">
         <ng-container matColumnDef="assetCode">
           <th mat-header-cell *matHeaderCellDef> Asset </th>
-          <td mat-cell *matCellDef="let advice"> <div class="table-cell-title">{{advice.assetCode}}</div>{{advice.assetName}} </td>
+          <td mat-cell *matCellDef="let advice" (click)="goToAssetDetails(advice.assetId)" class="pointer"> 
+            <div class="table-cell-title">{{advice.assetCode}}</div>{{advice.assetName}} 
+          </td>
         </ng-container>
       
         <ng-container matColumnDef="adviceType">
@@ -16,7 +18,7 @@
       
         <ng-container matColumnDef="advisorName">
           <th mat-header-cell *matHeaderCellDef> Expert </th>
-          <td mat-cell *matCellDef="let advice">
+          <td mat-cell *matCellDef="let advice" (click)="goToExpertDetails(advice.advisorId)" class="pointer">
               <div class="expert-rating">
                 <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="advice.advisorRanking" [title]="advice.advisorRanking | number: '1.2-2'"></bar-rating>
               </div>
