--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -1,6 +1,6 @@
 <div class="global-container">
   <div class="section-title">
-    TOP EXPERTS
+    {{title}}
   </div>
   <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="16px" class="section-filter" *ngIf="!hideFilters">
     <mat-form-field>
