--- a/Web/src/app/components/header/header.component.html
+++ b/Web/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="global-container">
-    <img src="./assets/logo.png" routerLink="" class="landing-logo" />
+    <img src="./assets/logo.png" [routerLink]="isLogged() ? ['/feed'] : ['']" class="landing-logo" />
     <span class="spacer"></span>
     <div class="menu" fxLayout="row" fxLayoutAlign="space-around center">
         <a fxShow="true" fxHide.lt-md="true" *ngIf="!loginData || !loginData.isAdvisor" href="#" (click)="onBecomeExpert()" routerLinkActive="active"><span>BECOME AN EXPERT</span></a>
